# Cardiac-Studio

./: .gitignore  DESIGN.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release-latest.yml
docs/: ARCHITECTURE.md  PROJECT_FORMAT.md  ROADMAP.md  WORKFLOW.md
examples/starter-deck.cardiac/: manifest.json  project.json
examples/starter-deck.cardiac/data/: ds-creatures-0001.json
scripts/: make-source-icon.mjs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: assets.rs  export.rs  format.rs  main.rs  project.rs
src/components/Canvas/: CanvasArea.tsx  PreviewMode.tsx
src/components/Grid/: DataGrid.tsx
src/components/Panels/: AlignButtons.tsx  AnchorPicker.tsx  ContextMenu.tsx  CsvListInput.tsx  DragNumber.tsx  IconAutocompleteTextarea.tsx  LeftPanel.tsx  PalettePicker.tsx  RightPanel.tsx
src/components/Shell/: AppShell.tsx  AssetsPanel.tsx  Dialog.tsx  ExportPanel.tsx  Icons.tsx  StatusBar.tsx  Tabs.tsx  TitleBar.tsx  Welcome.tsx  useKeyboardShortcuts.ts
src/engine/binding/: resolve.test.ts  resolve.ts
src/engine/export/: png.ts
src/engine/format/: assets.ts  load.ts  migrations.ts  save.ts
src/engine/render/: svg.tsx  text.test.ts  text.ts
src/io/: clipboard.ts  tauri.ts
src/model/: cardPresets.ts  defaults.ts  fonts.ts  selectors.ts  types.ts
src/schemas/: project.schema.json
src/store/: document.ts  editor.ts  recents.ts
src/styles/: app.css
